# pattern-scout

./: .env.example  .gitignore  2025-08-06-this-session-is-being-continued-from-a-previous-co.txt  ALGORITHM_ANALYSIS.md  ALGORITHM_DESIGN_CN.md  ALGORITHM_UPDATE_LOG.md  CLAUDE.md  GEMINI.md  PROJECT_SUMMARY.md  README.md  analyze_pattern_outcomes.py  archive_pattern_data.py  check_database.py  config.yaml  config_multi_timeframe.yaml  debug_detection.py  debug_flag_filter.py  demo_multi_timeframe.py  generate_all_pattern_charts.py  generate_pattern_report.py  generate_pattern_visualizations.py  generate_sample_pattern_charts.py  main.py  main_dynamic.py  pyproject.toml  quick_test.py  regenerate_baseline_chart.py  test_data_loading.py  test_quick_flag_detection.py  test_simple_flag_detection.py  test_system.py  识别旗形和三角旗形形态旗杆的算法思路.md
.claude/: settings.local.json
docs/: 开发计划-基于动态基线的旗形识别系统重构.md
output/: performance_analysis.json  performance_report.md  quick_test_results.json  real_data_test_results.json
scripts/: demo_multi_timeframe.py  generate_all_pattern_charts.py  generate_pattern_report.py  generate_sample_pattern_charts.py
src/: __init__.py
tests/: performance_optimizer.py  quick_real_test.py  run_tests.py  simple_performance_analysis.py  test_algorithm_improvements.py  test_all_flagpoles_visualization.py  test_atr_adaptive.py  test_data_connectors.py  test_dataset_manager.py  test_dynamic_baseline_system.py  test_dynamic_flag_detector.py  test_dynamic_flagpole_detector.py  test_dynamic_pattern_scanner.py  test_final_all_flagpoles.py  test_flagpole_only.py  (+17 more)
(+105 files in other folders)
