[project]
name = "pattern-scout"
version = "0.1.0"
description = "Automatic Flag and Triangle Flag Pattern Recognition for Technical Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "mplfinance>=0.12.0",
    "pymongo>=4.6.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "PyYAML>=6.0.0",
    "scipy>=1.11.0",
    "ta-lib",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[tool.uv.sources]
ta-lib = { url = "https://github.com/cgohlke/talib-build/releases/download/v0.6.4/ta_lib-0.6.4-cp313-cp313-win_amd64.whl" }
